--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="card" id="word-card">
-      <h2>📚 Word of the Day</h2>
+      <h2>📚 Search a Word</h2>
       <input type="text" id="search">
       <p class="content" id="word">Enter the word and know the meaning.</p>
       <button id="wordbtn">Know meaning</button>
